 * Use proc_open not popen to spawn omni calls, allowing us
   to watch the output and timeout long running calls. Current timeout
   set to 12 minutes. Be sure to propagate the 'failed' message back
   to client calls when the call times out. (#863)
 * Avoid busy waits and failing to read all output from spawned Omni calls. (#1016)

== 2.13 ==
 * Provide UI for renewing certificates (#241)
 * Remove slice expiration from sliver renewal entry (#1010)

== 2.12 ==
 * Delete temporary km files (#979)
 * Emails sent from portal on behalf of experimenter need
   the from address quoted, specifically where the name of the 
   experimenter is an email address because no better name 
   is available. (#988)
 * Show each GENI site on map (#995)
 * Remove unused readyToLogin page (#996)
 * Delete unused script geni-renew-slice (#997)
 * Install new GENI Desktop certificate (#1001)
 * Avoid errors generating Omni config for users with no project (#1002)
 * Quote RSpec name/description in RSpec upload error messages (#1003)

== 2.11 ==
 * Quiet debug output in KM (#981)
 * Explicitly use the inside cert/key when launching Flack (#982)
 * Update GENI citation policy on account activation (#983)
 * Add GRAM aggregate (#984)
 * Add expiration column to certificate tables (#985)
 * Update to latest iRODS server cert (#986)
 * Fix occasional flack loading errors (#987)
 * Add 2nd GRAM aggregate (#989)
 * Use an overlay to help speaks-for flow (#991)

== 2.10.1 ==
 * Fix tool-omniconfigure for downloading just your Omni config
   file to preserve the requested version number in the URL,
   allowing you to get a config file for Omni 2.5. (#980)

== 2.10 ==
 * Support service attributes in portal and database (#968)
 * Pass the `--alap` option to omni calls
   (requires Omni 2.5) (#969)
 * Use explicit time zone in renew dates (#971)
 * Pass a default MA to the xml-signer tool (#972)
 * Use the chapi framework / interface from Omni 2.5. (#974)