@@ -81,72 +81,7 @@ if (array_key_exists("jacks", $_REQUEST)){
   $jacks=False;
 }
 
-$text = "";
-// Takes an arg am_id which may have multiple values. Each is treated
-// as the ID from the DB of an AM which should be queried
-// If no such arg is given, then query the DB and query all registered AMs
-
-if (! isset($ams) || is_null($ams)) {
-  // Didnt get an array of AMs
-  if (! isset($am) || is_null($am)) {
-    // Nor a single am
-    $ams = get_services_of_type(SR_SERVICE_TYPE::AGGREGATE_MANAGER);
-  } else {
-    $ams = array();
-    $ams[] = $am;
-  }
-}
-
-
-
-
-
-$slivers_output = '';
-if (! isset($ams) || is_null($ams) || count($ams) <= 0) {
-  error_log("Found no AMs!");
-  $slivers_output = "No AMs registered.";
-} else {
-  $slivers_output = "";
-
-  // Get the slice credential from the SA
-  $slice_credential = get_slice_credential($sa_url, $user, $slice_id);
-  
-  // Get the slice URN via the SA
-  $slice_urn = $slice[SA_ARGUMENT::SLICE_URN];
-
-  $am_urls = array();
-  foreach ($ams as $am) {
-    if (is_array($am)) {
-      if (array_key_exists(SR_TABLE_FIELDNAME::SERVICE_URL, $am)) {
-	$am_url = $am[SR_TABLE_FIELDNAME::SERVICE_URL];
-	//	error_log("Got am_url $am_url");
-      } else {
-	error_log("Malformed array of AM URLs?");
-	continue;
-      }
-    } else {
-      $am_url = $am;
-    }
-    $am_urls[] = $am_url; 
-  }
-  // Call list resources at the AM
-  $retVal = list_resources_on_slice($am_urls, $user, $slice_credential,
-				    $slice_urn, $slice_id);
-  
-  //  error_log("ListResources output = " . $retVal);
-
-}
-
-
-
 $header = "Resources on slice: $slice_name";
-if (! is_array($retVal) or count($retVal) == 1) {
-  $msg = $retVal;
-  $obj = null;
-} else {
-  $msg = $retVal[0];
-  $obj = $retVal[1];
-}
 
 show_header('GENI Portal: Slices',  $TAB_SLICES);
 ?>
